--- a/Views/Home/Contact_View.cshtml
+++ b/Views/Home/Contact_View.cshtml
@@ -18,7 +18,7 @@
         <h2>Form Liên Hệ</h2>
         <h4>
             Chúng tôi muốn lắng nghe ý kiến từ quý khách hàng<br />
-            Vui lòng liên hệ với chúng tôi, chúng tôi sẽ đảm bảo liên hệ lại với bạn trong khoảng thời gian sớm nhất có thể.
+            Vui lòng liên hệ với chúng tôi, <br />chúng tôi sẽ đảm bảo liên hệ lại với bạn trong khoảng thời gian sớm nhất có thể.
         </h4>
         <label>Họ và Tên</label>
         <br>
