--- a/Views/Home/product_details_view.cshtml
+++ b/Views/Home/product_details_view.cshtml
@@ -16,13 +16,13 @@
     </div>
     <ul class="nav-link">
         <li>
-            <a href="https://localhost:44373/Home/login_view">Login</a>
+            <a href="https://localhost:44373/Home/Login_View">Login</a>
         </li>
         <li>
             <a href="#">Register</a>
         </li>
         <li>
-            <a href="#">Contact</a>
+            <a href="https://localhost:44373/Home/Contact_View">Contact</a>
         </li>
     </ul>
 </nav>
