--- a/Views/Shared/Contact.cshtml
+++ b/Views/Shared/Contact.cshtml
@@ -37,7 +37,7 @@
                 <a href="https://localhost:44373/Home/Register_View">Register</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="https://localhost:44373/Home/Contact_View">Contact</a>
             </li>
         </ul>
     </nav>
