--- a/Views/Shared/Register.cshtml
+++ b/Views/Shared/Register.cshtml
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="slick/slick.min.js"></script>
 </head>
 <body>
-    @RenderBody()
+    <div>
+        @RenderBody()
+    </div>
 </body>
 </html>
