--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     @Styles.Render("~/Content/web_clothes.css")
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">    
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
     <script src="./web-clothes.js"></script>
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <div class="row justify-content-md-start">
+@*    <div class="row justify-content-md-start">
         <div class="col-md-4">
             <div class="card">
                 <div class="card-header">
@@ -36,7 +36,7 @@
             </div>
 
         </div>
-    </div>
+    </div>*@
     <nav class="nav">
         <div class="logo">
             <a href="https://localhost:44373/Home/web_clothes_view"><img src="~/Content/Images/logo.jpg" /></a>
@@ -49,13 +49,13 @@
         </div>
         <ul class="nav-link">
             <li>
-                <a href="https://localhost:44373/Home/Login_View">Login</a>
+                <a href="@Url.Action("Login_View","Home")">Login</a>
             </li>
             <li>
-                <a href="https://localhost:44373/Home/Register_View">Register</a>
+                <a href="@Url.Action("Register_View","Home")">Register</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="@Url.Action("Contact_View", "Home")">Contact</a>
             </li>
         </ul>
     </nav>
@@ -76,11 +76,11 @@
             <div class="help">
                 <h2>Hướng Dẫn</h2>
                 <ul class="de-muc">
-                    <li><a href="https://localhost:44373/Home/dieu_khoan_view">Điều Khoản</a></li>
-                    <li><a href="https://localhost:44373/Home/huong_dan_mua_hang_view">Hướng Dẫn Mua Hàng</a></li>
-                    <li><a href="https://localhost:44373/Home/chinh_sach_doi_tra_view">Chính Sách Đổi Trả</a></li>
-                    <li><a href="">Bảo Mật Thông Tin Khách Hàng</a></li>
-                    <li><a href="">Chính Sách Thanh Toán</a></li>
+                    <li><a href="@Url.Action("dieu_khoan_view","Home")">Điều Khoản</a></li>
+                    <li><a href="@Url.Action("huong_dan_mua_hang_view","Home")">Hướng Dẫn Mua Hàng</a></li>
+                    <li><a href="@Url.Action("chinh_sach_doi_tra_view","Home")">Chính Sách Đổi Trả</a></li>
+                    <li><a href="@Url.Action("chinh_sach_bao_mat_thong_tin_view","Home")">Bảo Mật Thông Tin Khách Hàng</a></li>
+                    <li><a href="@Url.Action("chinh_sach_thanh_toan_view","Home")">Chính Sách Thanh Toán</a></li>
                     <li class="reversed"><p>Co_Chay®</p></li>
                     <li class="reversed"><p>Copy By Needs Of Wisdom®</p></li>
                 </ul>
