--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
     </div>*@
     <nav class="nav">
         <div class="logo">
-            <a href="https://localhost:44373/Home/web_clothes_view"><img src="~/Content/Images/logo.jpg" /></a>
+            <a href="@Url.Action("Index","Home")"><img src="~/Content/Images/logo.jpg" /></a>
         </div>
         <div class="search-box">
             <input type="text" name="search" class="input-search" placeholder="Search" />
