--- a/Views/Shared/Contact.cshtml
+++ b/Views/Shared/Contact.cshtml
@@ -51,8 +51,8 @@
                 <div class="icon">
                     <a href="https://www.facebook.com/hoangtran1609"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/lol_bruzzzz/"><i class="fa-brands fa-instagram"></i></a><br /><br />
-                    <a href=""><i class="fa-brands fa-telegram"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://t.me/hoangtran203"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="https://twitter.com/HOANGTRAN_203"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
             <div class="help">
