--- a/Views/Shared/chinh_sach_bao_mat_thong_tin.cshtml
+++ b/Views/Shared/chinh_sach_bao_mat_thong_tin.cshtml
@@ -17,7 +17,7 @@
 <body>
     <nav class="nav">
         <div class="logo">
-            <a href="https://localhost:44373/Home/web_clothes_view"><img src="~/Content/Images/logo.jpg" /></a>
+            <a href="@Url.Action("Index","Home")"><img src="~/Content/Images/logo.jpg" /></a>
         </div>
         <div class="search-box">
             <input type="text" name="search" class="input-search" placeholder="Search" />
@@ -47,8 +47,8 @@
                 <div class="icon">
                     <a href="https://www.facebook.com/hoangtran1609"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/lol_bruzzzz/"><i class="fa-brands fa-instagram"></i></a><br /><br />
-                    <a href=""><i class="fa-brands fa-telegram"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://t.me/hoangtran203"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="https://twitter.com/HOANGTRAN_203"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
             <div class="help">
