--- a/Areas/admin/Views/product/Create.cshtml
+++ b/Areas/admin/Views/product/Create.cshtml
@@ -11,7 +11,7 @@
     }
 </style>
 
-@using (Html.BeginForm("Create", "products", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Create", "product", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
