--- a/Views/products/Index.cshtml
+++ b/Views/products/Index.cshtml
@@ -7,10 +7,8 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+
+<table class="table" id="myTable">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.name)
@@ -48,7 +46,7 @@
             @Html.DisplayFor(modelItem => item.discount)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.images)
+            <img src="~/Content/Images/@item.images" width="100" height="100"/>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.brand.name_brand)
@@ -58,13 +56,10 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.warehouse.id_warehouse)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_products }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_products }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_products })
-        </td>
+        </td>       
     </tr>
 }
 
 </table>
+
+
