--- a/Views/cart/showcart.cshtml
+++ b/Views/cart/showcart.cshtml
@@ -1,5 +1,4 @@
-﻿@using do_an_web.Models
-@model List<do_an_web.Models.needtobuy>
+﻿@model List<do_an_web.Models.needtobuy>
 @{
     ViewBag.Title = "showcart";
     Layout = "~/Views/Shared/_Layout.cshtml";
