--- a/Views/cart/cartpartial.cshtml
+++ b/Views/cart/cartpartial.cshtml
@@ -1,11 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "cartpartial";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<a href="@Url.Action("showcart", "cart")" style="text-decoration: none; color:
+﻿<a href="@Url.Action("showcart", "cart")" style="text-decoration: none; color:
 white; font-weight: bold">
-    <img src="~/Content/Images/Giohang.gif" /> Giỏ hàng (@ViewBag.caculate_total_quantity)
+    <img src="~/Images/Giohang.gif" /> Giỏ hàng (@ViewBag.TongSL)
 </a>
-
