--- a/Views/cart/cartpartial.cshtml
+++ b/Views/cart/cartpartial.cshtml
@@ -1,4 +1,4 @@
 ﻿<a href="@Url.Action("showcart", "cart")" style="text-decoration: none; color:
 white; font-weight: bold">
-    <img src="~/Images/Giohang.gif" /> Giỏ hàng (@ViewBag.TongSL)
+    <img src="~/Content/Images/Giohang.gif" /> Giỏ hàng (@ViewBag.caculate_total_quantity)
 </a>
