--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="tab2-title">
         <ul class="tab2-details">
             <li class="home">
-                <a href="https://localhost:44373/Home/web_clothes_view">Home</a>
+                <a href="@Url.Action("Index","Home")">Home</a>
             </li>
             <li class="list">
                 <p style="font-family: monospace; font-weight:700; font-size:25px;">Clothings</p>
