--- a/Views/Home/chinh_sach_bao_mat_thong_tin_view.cshtml
+++ b/Views/Home/chinh_sach_bao_mat_thong_tin_view.cshtml
@@ -5,7 +5,7 @@
 }
 
 <nav class="dieu-khoan-tag">
-    <a class= "dieu-khoan" href="https://localhost:44373/Home/chinh_sach_bao_mat_thong_tin_view">Chính Sách Bảo Mật Thông Tin KH</a>
+    <a href="@Url.Action("chinh_sach_bao_mat_thong_tin_view","Home", new {@class="dieu-khoan"})">Bảo Mật Thông Tin Khách Hàng</a>
 </nav>
 <nav class="title-dieu-khoan">
     <div class="main-dieu-khoan">
