--- a/Views/Home/chinh_sach_doi_tra_view.cshtml
+++ b/Views/Home/chinh_sach_doi_tra_view.cshtml
@@ -5,7 +5,7 @@
 }
 <nav class="trading">
     <div class="trade-title">
-        @Html.ActionLink("Chính Sách Đổi Trả Hàng", "chinh_sach_doi_tra","Home",null, new {@class="title1"})
+        <a href="@Url.Action("chinh_sach_doi_tra_view","Home", new {@class="title1"})">Chính Sách Đổi Trả</a>
     </div>
     <div class=" trade-main">
         <p>
