--- a/Views/Home/dieu_khoan_view.cshtml
+++ b/Views/Home/dieu_khoan_view.cshtml
@@ -6,7 +6,7 @@
 
 
 <nav class="dieu-khoan-tag">
-    <a class = "dieu-khoan" href="https://localhost:44373/Home/dieu_khoan_view">Điều Khoản</a>
+    <a href="@Url.Action("dieu_khoan_view","Home", new {@class="dieu-khoan"})">Điều Khoản</a>
 </nav>
 <nav class="title-dieu-khoan">
     <div class="main-dieu-khoan">
