--- a/Views/Home/huong_dan_mua_hang_view.cshtml
+++ b/Views/Home/huong_dan_mua_hang_view.cshtml
@@ -5,8 +5,8 @@
 }
 
 
-<nav class="help-tag">
-    <a class ="help" href="https://localhost:44373/Home/huong_dan_mua_hang_view">Hướng Dẫn Mua Hàng</a>
+<nav class="help-tag">   
+    <a href="@Url.Action("huong_dan_mua_hang_view","Home", new {@class="help"})">Hướng Dẫn Mua Hàng</a>
 </nav>
 <nav class="title-help">
     <div class="main-help">        
